# wierdo-owns-fly

./: LICENSE  README.md  awesome_game.cpp  build.csh
use-the-fork/: .cproject  .project  Bullet.cpp  Bullet.h  CMakeLists.txt  CircleAlien.cpp  CircleAlien.h  DumbAlien.cpp  DumbAlien.h  DumbAlienArmy.cpp  DumbAlienArmy.h  Player.cpp  Player.h  SpaceObject.cpp  SpaceObject.h  SpaceObjectFactory.cpp  SpaceObjectFactory.h  TrackingAlien.cpp  TrackingAlien.h  TrackingAlienArmy.cpp  TrackingAlienArmy.h  use-the-fork.cpp
use-the-fork/cmake/: FindSFML.cmake
